Defining regions of interest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,11 @@ include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 add_executable( loadDisplaySave src/chapter1/loadDisplaySave.cpp )
 add_executable( mat src/chapter1/mat.cpp )
-#add_executable( logo src/chapter1/logo.cpp )
+add_executable( logo src/chapter1/logo.cpp )
+
 target_link_libraries( loadDisplaySave ${OpenCV_LIBS} )
 target_link_libraries( mat ${OpenCV_LIBS} )
-#target_link_libraries( logo ${OpenCV_LIBS} )
+target_link_libraries( logo ${OpenCV_LIBS} )
 
 # copy required images to every directory with executable
 SET (IMAGES ${CMAKE_SOURCE_DIR}/images/puppy.bmp ${CMAKE_SOURCE_DIR}/images/smalllogo.png)
